[plugin-web-app] Deprecate non-generic step saving number of elements found by attribute (#2120)